# leo_desktop-release

./: CHANGELOG.rst  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
leo_desktop/: CHANGELOG.rst  CMakeLists.txt  package.xml
leo_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
leo_viz/launch/: view_model.launch
rpm/: ros-noetic-leo-desktop.spec  ros-noetic-leo-viz.spec
