<?xml version="1.0"?>
<package format="2">
  <name>leo_viz</name>
  <version>0.2.2</version>
  <description>
    Visualization launch files and RViz configurations for Leo Rover
  </description>

  <author>Błażej Sowa</author>

  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>
  <author email="blazej@turtlerover.com">Błażej Sowa</author>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/leo_viz</url>
  <url type="bugtracker">https://github.com/LeoRover/leo_desktop/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_desktop</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>

  <exec_depend>leo_description</exec_depend>
</package>
