<?xml version="1.0"?>
<package format="2">
  <name>leo_desktop</name>
  <version>0.3.0</version>
  <description>
    Metapackage of software for operating Leo Rover from ROS desktop
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/leo_desktop</url>
  <url type="bugtracker">https://github.com/LeoRover/leo_desktop/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_desktop</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>leo_viz</exec_depend>
  <exec_depend>leo</exec_depend>

  <export>
    <metapackage />
  </export>
</package>